Sat Dec 11 16:09:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DoubleSeq.pidl:
          Updated regeneration instructions

        * tao/DoubleSeqA.cpp
        * tao/DoubleSeqC.{h,cpp}:
          Regenerated

Sat Dec 11 16:05:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableInterceptor.pidl:
          Updated regeneration instructions

        * tao/PortableInterceptorA.cpp:
        * tao/PortableInterceptorC.{h,cpp,i,inl}:
          Regenerated and replace .i file with .inl variant

        * tao/Makefile.am:
          Updated because of changes above

        * tao/diffs/PortableInterceptor.diff:
          Updated

Sat Dec 11 15:10:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnySeq.pidl:
          Updated regeneration instructions

        * tao/AnySeqA.cpp
        * tao/AnySeqC.{h,cpp}:
          Regenerated

Sat Dec 11 14:29:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ObjectIdList.pidl:
          Updated regeneration instructions

        * tao/ObjectIdListC.{h,cpp,inl,i}:
          Regenerated and replace .i file with .inl variant

        * tao/ObjectIdListA.cpp:
          New generated file

        * tao/tao.mpc:
          Added ObjectIdListA.cpp

        * tao/Makefile.am:
          Updated because of changes above

Sat Dec 11 14:12:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI_Forward.pidl:
          Updated regeneration instructions

        * tao/PI_ForwardC.{h,cpp,inl}:
          Regenerated

        * tao/PI_ForwardA.cpp:
          New generated file

        * tao/Policy.pidl:
          Updated regeneration instructions

        * tao/PI_ForwardA.cpp:
        * tao/PI_ForwardC.{h,cpp,i,inl}:
          Regenerated and replace .i file with .inl variant

        * tao/tao.mpc:
          Added PI_ForwardA.cpp

        * tao/diffs/Policy.diff:
          Updated

        * tao/Makefile.am: