@@ -10,7 +10,7 @@
  *     tao_idl
  *        -o orig -Ge 1 -Sc -GT -GA
  *          -Wb,export_macro=TAO_Export
- *          -Wb,export_include=TAO_Export.h
+ *          -Wb,export_include="tao/TAO_Export.h"
  *          -Wb,pre_include="ace/pre.h"
  *          -Wb,post_include="ace/post.h"
  *          LongLongSeq.pidl
