@@ -27,10 +27,12 @@
 
 #include "LongLongSeqC.h"
 #include "tao/Typecode.h"
+#include "tao/CDR.h"
+#include "tao/Any.h"
 #include "tao/Any_Dual_Impl_T.h"
 
 // TAO_IDL - Generated from
-// w:\ace_wrappers\tao\tao_idl\be\be_visitor_typecode/typecode_defn.cpp:290
+// be\be_visitor_typecode/typecode_defn.cpp:295
 
 static const CORBA::Long _oc_CORBA_LongLongSeq[] =
 {
@@ -63,7 +65,7 @@ static CORBA::TypeCode _tc_TAO_tc_CORBA_LongLongSeq (
     sizeof (_oc_CORBA_LongLongSeq),
     (char *) &_oc_CORBA_LongLongSeq,
     0,
-    sizeof (CORBA::LongLongSeq)
+    0
   );
 
 namespace CORBA
@@ -73,7 +75,7 @@ namespace CORBA
 }
 
 // TAO_IDL - Generated from 
-// w:\ace_wrappers\tao\tao_idl\be\be_visitor_sequence/any_op_cs.cpp:54
+// be\be_visitor_sequence/any_op_cs.cpp:54
 
 // Copying insertion.
 void operator<<= (
@@ -130,8 +132,6 @@ CORBA::Boolean operator>>= (
       );
 }
 
-
-
 #if defined (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION)
 
   template class
@@ -146,5 +146,4 @@ CORBA::Boolean operator>>= (
         CORBA::LongLongSeq \
       >
 
-#endif /* !ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */
-
+#endif /* !ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */ 
